exports[`test render add mode 1`] = `
<span
  className="bBeLnM"
  onClick={undefined}>
  Assign
</span>
`;

exports[`test render remove mode 1`] = `
<span
  className="gZIOPq"
  onClick={undefined}>
  Un-Assign
</span>
`;
